# multi-vehicle-scheduler

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/multi_vehicle_scheduler/scheduler_backend/: __init__.py  models.py  scheduler.py
src/multi_vehicle_scheduler/viewer_pyglet/: __init__.py  app.py  models.py  scenario_loader.py  scenario_schema.py  simulation.py
src/multi_vehicle_scheduler/viewer_pyglet/scenarios/: bootstrap_city_block.json
