[project]
name = "multi-vehicle-scheduler"
version = "0.1.0"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pyglet>=2.1.13",
]

[project.scripts]
pyglet = "multi_vehicle_scheduler.viewer_pyglet:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
